--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "dev": "ts-node index.ts",
     "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "biome check . --ext .ts",
+    "format": "biome format . --ext .ts"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "yn": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "@types/node": "^18.7.18"
+    "@biomejs/biome": "^1.9.4"
   }
 }
