--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
+    "format": "turbo run format",
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.9",
     "ts-node": "^10.9.2",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3"
   },
-  "workspaces": [
-    "apps/frontend",
-    "apps/backend"
-  ]
+  "workspaces": ["apps/frontend", "apps/backend"]
 }
